changed color theme, fixed scrollbar problem

--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,4 +1,4 @@
 .Content {
-    height: 100%;
+    height: calc(100% - 60px);
     
 }
